[tool.poetry]
name = "transformer-new"
version = "0.1.0"
description = ""
authors = ["giodefa96 <giodefa96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.4"
torch = "2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
